# streaming-sts

./: .gitignore  README.md  app.py  cli_voice_chat.py  llm_manager.py  pyproject.toml  run.py  speech_to_text.py  speech_to_text_cli.py  test_llm_speech.py  test_speech.py  turn_detection_tester.py  web_app.py
